testdata/invalid/internal/domain/order/alias_bad.go
package order

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/order/core/model"
